Refactored head. Added react icon to toolkit and flex wrap in lieu of grid.

--- a/about.html
+++ b/about.html
@@ -35,16 +35,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/style.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/552f79f5ce.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/src/index.js"></script>
   </head>
   <body class="mb-3">
     <div class="container">
@@ -169,162 +159,161 @@
             My Toolkit <i class="fa-solid fa-laptop"></i>
           </h2>
         </div>
-
-        <div class="about-toolkit-box">
-          <div class="toolkit">
-            <div class="row">
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/html-icon.png"
-                      alt="HTML 5"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">HTML</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/css-icon.png"
-                      alt="CSS"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">CSS</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/javascript-icon.png"
-                      alt="JavaScript"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">JavaScript</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/bootstrap-icon.png"
-                      alt="BootStrap Framework"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">Bootstrap</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/api-icon.png"
-                      alt="API Application Programming Interface"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">API</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/seo-icon.png"
-                      alt="SEO Search Engine Optimisation"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">SEO</li>
-                </ul>
-              </div>
-            </div>
+        <div class="about-toolkit-box d-flex flex-wrap">
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/html-icon.png"
+                  alt="HTML 5"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">HTML</li>
+            </ul>
           </div>
-
-          <div class="toolkit">
-            <div class="row">
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/vs-code-editor-icon.png"
-                      alt="VS Code Editor"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">VS Code</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/git-icon.png"
-                      alt="Git Repositories"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">Git</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/github-icon.svg"
-                      alt="GitHub"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">GitHub</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/hosting-icon.png"
-                      alt="Hosting"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">Hosting</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/ai-icon.png"
-                      alt="AI Prompt Engineering"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">AI</li>
-                </ul>
-              </div>
-              <div class="col-4 col-md-2">
-                <ul class="skills">
-                  <li class="mb-2">
-                    <img
-                      src="/logos/responsive-icon.png"
-                      alt="Responsive Interfaces"
-                      class="img-fluid"
-                    />
-                  </li>
-                  <li class="skills-text">Responsive</li>
-                </ul>
-              </div>
-            </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img src="/logos/css-icon.png" alt="CSS" class="img-fluid" />
+              </li>
+              <li class="skills-text">CSS</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/javascript-icon.png"
+                  alt="JavaScript"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">JavaScript</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/bootstrap-icon.png"
+                  alt="BootStrap Framework"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">Bootstrap</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/api-icon.png"
+                  alt="API Application Programming Interface"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">API</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/seo-icon.png"
+                  alt="SEO Search Engine Optimisation"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">SEO</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/vs-code-editor-icon.png"
+                  alt="VS Code Editor"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">VS Code</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/git-icon.png"
+                  alt="Git Repositories"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">Git</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/github-icon.svg"
+                  alt="GitHub"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">GitHub</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/hosting-icon.png"
+                  alt="Hosting"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">Hosting</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/ai-icon.png"
+                  alt="AI Prompt Engineering"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">AI</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/responsive-icon.png"
+                  alt="Responsive Interfaces"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">Responsive</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="skills">
+              <li class="mb-2">
+                <img
+                  src="/logos/react-icon.png"
+                  alt="Responsive Interfaces"
+                  class="img-fluid"
+                />
+              </li>
+              <li class="skills-text">React</li>
+            </ul>
           </div>
         </div>
+
         <div
           class="d-flex mt-5 mb-5 justify-content-center about-hobby-images"
           id="scroll-pictures"
@@ -409,5 +398,15 @@
         </p>
       </footer>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/552f79f5ce.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/src/index.js"></script>
   </body>
 </html>
