--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XHYMHB8ZNS"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XHYMHB8ZNS"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-XHYMHB8ZNS');
-</script>
+      gtag("config", "G-XHYMHB8ZNS");
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contact Front-end developer LJ Fryer. Find my email, Instagram, LinkedIn, GitHub, Netlify and SheCodes profile.">
@@ -26,16 +31,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/style.css" />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/552f79f5ce.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="/src/index.js"></script>
+    
   </head>
   <body class="mb-3">
     <div class="container">
@@ -205,5 +201,15 @@
         </p>
       </footer>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/552f79f5ce.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/src/index.js"></script>
   </body>
 </html>
