--- a/contact.html
+++ b/contact.html
@@ -94,8 +94,9 @@
       </header>
       <main>
         <div class="contact-inner d-flex justify-content-center">
-          <div class="hello-box d-flex align-self-center" id="hello-box">
-            <p class="hello-text">hello</p>
+          <div class="hello-box align-self-center">
+            <div class="d-flex"><span class="hello" id="hello"></span></div>
+            
           </div>
           <div class="contact-section d-flex flex-column text-center align-self-center">
             <h1 class="contact-heading">say hi</h1>
@@ -210,6 +211,7 @@
       src="https://kit.fontawesome.com/552f79f5ce.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="/src/index.js"></script>
   </body>
 </html>
