--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
       src="https://kit.fontawesome.com/552f79f5ce.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="/src/index.js"></script>
   </body>
 </html>
