Replaced project links on index.html with buttons

--- a/index.html
+++ b/index.html
@@ -158,26 +158,14 @@
                     <br />
                   </p>
 
-                  <div class="d-flex project-links">
+                  <div class="d-flex">
                     <a
                       href="https://ljf-weather-app.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
-                      ><img
-                        src="/logos/netlify-logo-lightmode.png"
-                        alt="Netlify Project Link"
-                        class="img-fluid external-logos"
-                    /></a>
-                    <a
-                      href="https://github.com/LJ-Fryer/react-weather-app"
-                      target="_blank"
-                      title="GitHub Link"
+                      class="project-button"
+                      title="5 Day Forecast"
+                      >5 Day Forecast</a
                     >
-                      <img
-                        src="/logos/git-icon.png"
-                        alt="GitHub Project Link"
-                        class="img-fluid external-logos"
-                    /></a>
                   </div>
                 </div>
               </div>
@@ -201,26 +189,14 @@
                     <br />
                     <br />
                   </p>
-                  <div class="d-flex project-links">
+                  <div class="d-flex">
                     <a
-                      href="https://vocabulator.netlify.app/"
+                      href="https://ljf-weather-app.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
-                      ><img
-                        src="/logos/netlify-logo-lightmode.png"
-                        alt="Netlify Project Link"
-                        class="img-fluid external-logos"
-                    /></a>
-                    <a
-                      href="https://github.com/LJ-Fryer/dictionary-project"
-                      target="_blank"
-                      title="GitHub Link"
+                      class="project-button"
+                      title="5 Day Forecast"
+                      >Vocabulator</a
                     >
-                      <img
-                        src="/logos/git-icon.png"
-                        alt="GitHub Project Link"
-                        class="img-fluid external-logos"
-                    /></a>
                   </div>
                 </div>
               </div>
@@ -244,26 +220,14 @@
                     <br />
                     <br />
                   </p>
-                  <div class="d-flex project-links">
+                  <div class="d-flex">
                     <a
-                      href="https://ashtanga-yoga.netlify.app/"
+                      href="https://ljf-weather-app.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
-                      ><img
-                        src="/logos/netlify-logo-lightmode.png"
-                        alt="Netlify Project Link"
-                        class="img-fluid external-logos"
-                    /></a>
-                    <a
-                      href="https://github.com/LJ-Fryer/ashtanga-project"
-                      target="_blank"
-                      title="GitHub Link"
+                      class="project-button"
+                      title="5 Day Forecast"
+                      >Ashtanga</a
                     >
-                      <img
-                        src="/logos/git-icon.png"
-                        alt="GitHub Project Link"
-                        class="img-fluid external-logos"
-                    /></a>
                   </div>
                 </div>
               </div>
