Added navigation link on index

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </header>
       <main>
         <div class="hero">
-          <div class="hero-inner d-flex">
+          <div class="hero-inner d-flex" id="home">
             <div class="hero-text d-flex flex-column justify-content-center">
               <h1 class="hero-title">LJ FRYER</h1>
               <div class="hero-paragraph">
@@ -128,7 +128,7 @@
             />
           </div>
         </div>
-        <div class="text-center">
+        <div class="text-center site-navigation">
           <a href="/index.html#projects"
             ><i class="fa-solid fa-chevron-down down-icon"></i
           ></a>
@@ -233,6 +233,16 @@
               </div>
             </div>
           </div>
+        </div>
+        <h4 class="text-center site-navigation mt-5 mb-4">
+          <a href="./work.html"
+            >See more <i class="fa-solid fa-folder-open fs-5"></i
+          ></a>
+        </h4>
+        <div class="text-center">
+          <a href="/index.html#home"
+            ><i class="fa-solid fa-chevron-up up-icon site-navigation"></i
+          ></a>
         </div>
       </main>
       <footer class="mt-5">
