Added page navigation links with custom css class

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
         </nav>
       </header>
       <main>
-        <div class="about-inner d-flex">
+        <div class="about-inner d-flex" id="about-home">
           <img
             src="/images/trapeze-image.png"
             alt="LJ Fryer hanging from trapeze"
@@ -143,15 +143,15 @@
         <div class="winky-face">
           <div class="about-links mb-5 d-flex justify-content-center">
             <a href="/work.html" title="My Projects">
-              <i class="fa-regular fa-file"></i
+              <i class="fa-regular fa-file site-navigation"></i
             ></a>
             <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
-              ><i class="fa-regular fa-envelope"></i
+              ><i class="fa-regular fa-envelope site-navigation"></i
             ></a>
           </div>
           <div class="text-center mb-5">
             <a href="/about.html#toolkit" title="scroll down"
-              ><i class="fa-solid fa-chevron-down down-icon"></i
+              ><i class="fa-solid fa-chevron-down down-icon site-navigation"></i
             ></a>
           </div>
 
@@ -338,6 +338,11 @@
             alt="A butterly resting on my hand"
             class="img-fluid hobby-image-4-3"
           />
+        </div>
+        <div class="text-center mt-5">
+          <a href="/about.html#about-home"
+            ><i class="fa-solid fa-chevron-up up-icon site-navigation"></i
+          ></a>
         </div>
       </main>
       <footer class="mt-5">
