--- a/work.html
+++ b/work.html
@@ -101,12 +101,17 @@
       </header>
       <main class="work-wrapper mt-3">
         <div class="work-title-box text-center">
-          <h1><i class="fa-regular fa-file img-fluid"></i> My Work</h1>
+          <h1>
+            <i class="fa-regular fa-file img-fluid" id="work-home"></i>
+            My Work
+          </h1>
           <h4 class="p-2 mt-1 mb-3">Check out my projects</h4>
           <div>
             <div class="mb-4">
               <a href="/work.html#scroll-work" title="scroll down">
-                <i class="fa-solid fa-chevron-down img-fluid down-icon"></i>
+                <i
+                  class="fa-solid fa-chevron-down img-fluid down-icon site-navigation"
+                ></i>
               </a>
             </div>
           </div>
@@ -472,8 +477,13 @@
             </div>
           </div>
         </div>
+        <div class="text-center mt-5">
+          <a href="/work.html#work-home"
+            ><i class="fa-solid fa-chevron-up up-icon site-navigation"></i
+          ></a>
+        </div>
       </main>
-      <footer class="mt-5">
+      <footer class="mt-3">
         <div class="footer-inner d-flex justify-content-between">
           <div class="footer-email-box align-self-center d-flex">
             <a href="mailto:lj.fryer.001@gmail.com" title="email me"
