Corrected urls for external links

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   </p>
                   <div class="d-flex">
                     <a
-                      href="https://ljf-weather-app.netlify.app/"
+                      href="https://vocabulator.netlify.app/"
                       target="_blank"
                       class="project-button"
                       title="5 Day Forecast"
@@ -222,7 +222,7 @@
                   </p>
                   <div class="d-flex">
                     <a
-                      href="https://ljf-weather-app.netlify.app/"
+                      href="https://ashtanga-yoga.netlify.app/"
                       target="_blank"
                       class="project-button"
                       title="5 Day Forecast"
