Moved id tags for  scroll up to header

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
   </head>
   <body class="mb-3">
     <div class="container">
-      <header>
+      <header id="about-home">
         <nav class="navbar navbar-expand-lg bg-primary-color">
           <div class="container-fluid">
             <a class="navbar-brand text-light" href="/" title="Homepage">
@@ -100,7 +100,7 @@
         </nav>
       </header>
       <main>
-        <div class="about-inner d-flex" id="about-home">
+        <div class="about-inner d-flex">
           <img
             src="/images/trapeze-image.png"
             alt="LJ Fryer hanging from trapeze"
