--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body class="mb-3">
     <div class="container">
-      <header>
+      <header id="home">
         <nav class="navbar navbar-expand-lg bg-primary-color">
           <div class="container-fluid">
             <a class="navbar-brand active text-light" href="/" title="Homepage">
@@ -101,7 +101,7 @@
       </header>
       <main>
         <div class="hero">
-          <div class="hero-inner d-flex" id="home">
+          <div class="hero-inner d-flex">
             <div class="hero-text d-flex flex-column justify-content-center">
               <h1 class="hero-title">LJ FRYER</h1>
               <div class="hero-paragraph">
@@ -245,7 +245,7 @@
           ></a>
         </div>
       </main>
-      <footer class="mt-5">
+      <footer class="mt-2">
         <div class="footer-inner d-flex justify-content-between">
           <div class="footer-email-box align-self-center d-flex">
             <a href="mailto:lj.fryer.001@gmail.com" title="email me"
