--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
   </head>
   <body class="mb-3">
     <div class="container">
-      <header>
+      <header id="work-home">
         <nav class="navbar navbar-expand-lg bg-primary-color">
           <div class="container-fluid">
             <a class="navbar-brand text-light" href="/" title="Homepage">
@@ -102,7 +102,7 @@
       <main class="work-wrapper mt-3">
         <div class="work-title-box text-center">
           <h1>
-            <i class="fa-regular fa-file img-fluid" id="work-home"></i>
+            <i class="fa-regular fa-file img-fluid"></i>
             My Work
           </h1>
           <h4 class="p-2 mt-1 mb-3">Check out my projects</h4>
