Improved <a> titles on work page

--- a/work.html
+++ b/work.html
@@ -142,7 +142,7 @@
                     <a
                       href="https://ljf-weather-app.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
+                      title="Launch site"
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
@@ -151,7 +151,7 @@
                     <a
                       href="https://github.com/LJ-Fryer/react-weather-app"
                       target="_blank"
-                      title="GitHub Link"
+                      title="See my code"
                     >
                       <img
                         src="/logos/git-icon.png"
@@ -185,7 +185,7 @@
                     <a
                       href="https://vocabulator.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
+                      title="Launch site"
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
@@ -194,7 +194,7 @@
                     <a
                       href="https://github.com/LJ-Fryer/dictionary-project"
                       target="_blank"
-                      title="GitHub Link"
+                      title="See my code"
                     >
                       <img
                         src="/logos/git-icon.png"
@@ -228,7 +228,7 @@
                     <a
                       href="https://ashtanga-yoga.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
+                      title="Launch site"
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
@@ -237,7 +237,7 @@
                     <a
                       href="https://github.com/LJ-Fryer/ashtanga-project"
                       target="_blank"
-                      title="GitHub Link"
+                      title="See my code"
                     >
                       <img
                         src="/logos/git-icon.png"
@@ -273,7 +273,7 @@
                     <a
                       href="https://weather-app-ljf.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
+                      title="Launch site"
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
@@ -282,7 +282,7 @@
                     <a
                       href="https://github.com/LJ-Fryer/weather-forecast-app"
                       target="_blank"
-                      title="GitHub Link"
+                      title="See my code"
                     >
                       <img
                         src="/logos/git-icon.png"
@@ -314,7 +314,7 @@
                     <a
                       href="https://poem-generator-ljf.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
+                      title="Launch site"
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
@@ -323,7 +323,7 @@
                     <a
                       href="https://github.com/LJ-Fryer/poem-generator"
                       target="_blank"
-                      title="GitHub Link"
+                      title="See my code"
                     >
                       <img
                         src="/logos/git-icon.png"
@@ -388,7 +388,7 @@
                     <a
                       href="https://worldclock-lj.netlify.app/"
                       target="_blank"
-                      title="Launch Netlify Site"
+                      title="Launch site"
                       ><img
                         src="/logos/netlify-logo-lightmode.png"
                         alt="Netlify Project Link"
@@ -397,7 +397,7 @@
                     <a
                       href="https://github.com/LJ-Fryer/world-clock"
                       target="_blank"
-                      title="GitHub Link"
+                      title="See my code"
                     >
                       <img
                         src="/logos/git-icon.png"
