--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
       </header>
       <main>
         <div class="contact-inner d-flex justify-content-center">
-          <div class="hello-box align-self-center">
+          <div class="hello-box">
             <div class="d-flex"><span class="hello" id="hello"></span></div>
           </div>
           
